--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "node": "^12.4.0",
     "sequelize": "^5.8.11",
     "sqlite3": "^4.0.9"
   }
